# claude-activity-dashboard

./: .gitignore  CLAUDE.md  Makefile  README.md  analyze.py  ingest.py  metadata.yml  pyproject.toml
.claude/skills/analyze-usage/: SKILL.md
e2e/: create-fixture-db.py  playwright.config.ts  tsconfig.json
e2e/tests/: dashboard.spec.ts  navigation.spec.ts  session-detail.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: MessageList.test.tsx  useQuery.test.ts
frontend/src/components/: DailyActivityChart.tsx  HourlyDistributionChart.tsx  LoadingSpinner.tsx  MessageList.tsx  ProjectSummary.tsx  RecentSessions.tsx  StatCard.tsx  ToolUsageChart.tsx
frontend/src/hooks/: useQuery.ts
frontend/src/pages/: Dashboard.tsx  SessionDetail.tsx
frontend/src/types/: api.ts
plugins/: refresh.py
tests/: test_ingest.py
