[project]
name = "claude-activity-dashboard"
version = "0.1.0"
description = "Claude Code activity log viewer powered by Datasette"
requires-python = ">=3.11"
dependencies = [
    "datasette>=0.65",
    "datasette-dashboards>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
claude-dashboard = "ingest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
